# HED-score

./: README.md  pyproject.toml  requirements.txt
data/: download.py
experiments/: financial_ts.py  nsl_kdd.py  synthetic_shift.py
hed/: __init__.py  core.py  metrics.py  utils.py
models/: lstm.py  pard_ssm.py  rf.py
notebook/: demo.ipynb
plots/: far_hed_curve.py  hed_experimental_results.csv  hed_vs_auc.py
tests/: test_core.py  test_metrics.py
